# repokit

./: README.md  pyproject.toml
recipes/context-audit/: README.md  pipeline.sh
recipes/scaffold-check/: README.md  pipeline.sh
repokit/: cli.py  config.py  context_memory.py  scaffold.py  search.py  sync.py
repokit/templates/_shared/: .gitignore.j2  AGENTS.md.j2  AMP.md.j2  CHANGELOG.md.j2  CLAUDE.md.j2  CONTEXT_TRANSFER.md.j2  GEMINI.md.j2  LEARNINGS.md.j2  PROJECT_RULES.md.j2  WINDSURF.md.j2
repokit/templates/_shared/.windsurf/rules/: safety.md.j2
repokit/templates/agent/: DATA_CONTRACTS.md.j2  PRD.md.j2  README.md.j2
repokit/templates/agent/prompts/: README.md.j2
repokit/templates/app/: PRD.md.j2  README.md.j2
repokit/templates/automation/: PRD.md.j2  README.md.j2
repokit/templates/data/: DATA_CONTRACTS.md.j2  PIPELINE.md.j2  README.md.j2
repokit/templates/ml/: MODEL_CARD.md.j2  PIPELINE.md.j2  PRD.md.j2  README.md.j2
tests/: test_cli.py  test_context.py  test_scaffold.py  test_search.py  test_sync.py
